# etf-portfolio-tracker

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  portfolio_tracker.py  pyproject.toml  requirements.txt
config/: advanced.ini  config.ini  default.ini
data/input/: portfolios.xlsx
scripts/: portfolio_tracker.py
src/: __init__.py  main.py
src/cli/: __init__.py  const.py  main.py
src/report/: calcs.py  errors.py  report.py
src/utils/: data.py  pdf.py  types.py  util.py  utils.py
tests/: __init__.py
tests/report/: test_calcs.py  test_report.py
tests/utils/: test_data.py  test_pdf.py  test_util.py
